refactored code to include simple ui. made playRound a seperate function rather than in playGame. add event listers to buttons

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <script src="game.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="game.js"></script>
+    <button class="rock_btn">rock</button>
+    <button class="paper_btn">paper</button>
+    <button class="scissors_btn">scissors</button>
+
 </body>
 </html>
