finished simple ui with human/computer scores (left, right) and finished game logic

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <button class="rock_btn">rock</button>
     <button class="paper_btn">paper</button>
     <button class="scissors_btn">scissors</button>
-
+    <div class="result" id="human">0</div>;
+    <div class="result" id="computer">0</div>;
 </body>
 </html>
